<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/introduction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/MainViewIntroduction"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ListView
        android:id="@+id/ausleihen"
        android:layout_width="match_parent" 
		android:layout_height="wrap_content" >
    </ListView>

    <TextView
        android:id="@+id/reservations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/Reservations"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ListView
        android:id="@+id/reservationslist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>

    <Button
        android:id="@+id/deletereservation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/deleteReservation" />

    <Button
        android:id="@+id/reserve"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reserve" />

    <Button
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Logout" />

</LinearLayout>